--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,5 +75,6 @@
 
 {% block body_end_scripts %}
 <!-- Font Awesome for Icons -->
+{{ super() }}
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 {% endblock %}
